fix footer overlap on contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ ul{
     border: #dddddd 1px solid;
     margin: auto;
    margin-top: 110px;
-   margin-bottom: 25px;
+   margin-bottom: 50px;
     min-height: 185px;
    /* overflow: auto;*/
     padding: 10px;
